[package]
name = "rushroom"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.20.0"
eframe = { version = "0.29.1", features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",]}

egui = { version = "0.29.1", features = ["callstack", "default", "log"] }
glam = "0.29.2"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
typetag = "0.2.18"
